<resources>
    <string name="app_name">Lezzet Ötesi</string>
    <string name="kayitOl">KAYIT OL</string>
    <string name="yemekMenu">YEMEK ÇEŞİTLERİ</string>
    <string name="ad">AD</string>
    <string name="soyad">SOYAD</string>
    <string name="eposta">E-POSTA</string>
    <string name="telefon">TELEFON NUMARASI</string>
    <string name="sifre">ŞİFRE</string>
    <string name="corba">Çorbalar</string>
    <string name="anayemek">Ana Yemekler</string>
    <string name="makarna">Makarnalar</string>
    <string name="salata">Salatalar</string>
    <string name="icecek">İçecekler</string>
    <string name="pizza">Pizzalar</string>
    <string name="digerurun">Diğer Ürünler</string>
    <string name="tatli">Tatlılar</string>
    <string name="rezervasyon">REZERVASYON</string>
    <string name="rezervasyon_button">Rezervasyonu Oluştur</string>
    <string name="durum">Mevcut Durum</string>
    <string name="kisi_sayi">Kişi Sayısı</string>
    <string name="tarih">Tarih</string>
    <string name="saat">Saat</string>
    <string name="sil">Sil</string>
    <string name="takvime_ekle">Takvime Ekle</string>
    <string name="hakkimizda">Hakkımızda</string>
    <string name="misyon">MİSYONUMUZ</string>
    <string name="iletisim">İletişim</string>
    <string name="profil">PROFİL</string>
    <string name="profili_duzenle">Profili Düzenle</string>
    <string name="kaydet">KAYDET</string>
    <string name="hesabi_sil">Hesabı Sil</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_options_menu">options_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="yemek_detay">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="gunler">Pazartesi Salı      Çarşamba  Perşembe  Cuma      Cumartesi Pazar</string>
    <string name="saatler">18:00  23:00    18:00  23:00    18:00  23:00    18:00  23:00    17:00  00:00    17:00  00:00    17:00  00:00</string>

</resources>