<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@color/white"
    tools:context=".anaMenu">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_ana_menu"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconSize="25dp"
        app:itemPaddingTop="20dp"
        app:itemRippleColor="@color/white"
        app:menu="@menu/menu_bottom" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppins"
        android:text="@string/yemekMenu"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/imageButton_corba"
        android:layout_width="82dp"
        android:layout_height="104dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="140dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/kategori_corba" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton_corba"
        android:layout_alignLeft="@id/imageButton_corba"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/corba"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/imageButton_anayemek"
        android:layout_width="105dp"
        android:layout_height="108dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="140dp"
        android:layout_toRightOf="@id/imageButton_corba"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/kategori_anayemek" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton_corba"
        android:layout_alignLeft="@id/imageButton_anayemek"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/anayemek"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/imageButton_makarna"
        android:layout_width="123dp"
        android:layout_height="96dp"
        android:layout_below="@id/textView1"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="23dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/kategori_makarna" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton_makarna"
        android:layout_alignLeft="@id/imageButton_makarna"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/makarna"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/imageButton_salata"
        android:layout_width="121dp"
        android:layout_height="81dp"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="36dp"
        android:layout_toRightOf="@id/imageButton_makarna"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/kategori_salata" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton_salata"
        android:layout_alignLeft="@id/imageButton_salata"
        android:layout_centerInParent="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/salata"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/imageButton_pizza"
        android:layout_width="123dp"
        android:layout_height="96dp"
        android:layout_below="@id/textView3"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="27dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/kategori_pizza" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton_pizza"
        android:layout_alignLeft="@id/imageButton_pizza"
        android:layout_centerInParent="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/pizza"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/imageButton_tatli"
        android:layout_width="121dp"
        android:layout_height="81dp"
        android:layout_below="@id/textView4"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="43dp"
        android:layout_toRightOf="@id/imageButton_pizza"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/kategori_tatli" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton_tatli"
        android:layout_alignLeft="@id/imageButton_tatli"
        android:layout_centerInParent="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/tatli"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/imageButton_icecek"
        android:layout_width="123dp"
        android:layout_height="96dp"
        android:layout_below="@id/textView5"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="27dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/kategori_icecek" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton_icecek"
        android:layout_alignLeft="@id/imageButton_icecek"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/icecek"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/imageButton_yanurun"
        android:layout_width="121dp"
        android:layout_height="81dp"
        android:layout_below="@id/textView6"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="43dp"
        android:layout_toRightOf="@id/imageButton_pizza"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/kategori_yanurun" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton_yanurun"
        android:layout_alignLeft="@id/imageButton_yanurun"
        android:layout_centerInParent="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/digerurun"
        android:textColor="@color/black"
        android:textSize="16sp" />


</RelativeLayout>